fix(next-release/main) Make spacing less weird on table of contents links (#6332)
* update spacing on toc h2 links

* use less weird spacing on all toc links instead

* remove empty selector

--- a/src/styles/toc.scss
+++ b/src/styles/toc.scss
@@ -26,14 +26,12 @@
     color: var(--amplify-colors-font-primary);
     text-decoration: none;
     line-height: var(--amplify-line-heights-small);
+    margin-block: var(--amplify-space-xs);
     &:visited {
       color: var(--amplify-colors-font-primary);
     }
     &:hover {
       text-decoration: underline;
-    }
-    &--h2 {
-      margin-top: var(--amplify-space-medium);
     }
     &--h3 {
       padding-inline-start: var(--amplify-space-large);
